--- a/code/MainWindow.xaml
+++ b/code/MainWindow.xaml
@@ -11,7 +11,7 @@
             <ColumnDefinition Width="61*"/>
             <ColumnDefinition Width="335*"/>
         </Grid.ColumnDefinitions>
-        <ProgressBar x:Name="bar1" HorizontalAlignment="Left" Height="85" Margin="-80,173,0,0" VerticalAlignment="Top" Width="374" RenderTransformOrigin="0.5,0.5" ValueChanged="Bar1_ValueChanged" Maximum="20000" SmallChange="0.001" Minimum="-20000" LargeChange="0.01" Grid.ColumnSpan="2">
+        <ProgressBar x:Name="bar1" HorizontalAlignment="Left" Height="85" Margin="-80,173,0,0" VerticalAlignment="Top" Width="374" RenderTransformOrigin="0.5,0.5"  Maximum="20000" SmallChange="0.001" Minimum="-20000" LargeChange="0.01" Grid.ColumnSpan="2">
             <ProgressBar.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="0.997" ScaleX="1.003"/>
@@ -21,7 +21,7 @@
                 </TransformGroup>
             </ProgressBar.RenderTransform>
         </ProgressBar>
-        <ProgressBar x:Name="bar2" HorizontalAlignment="Left" Height="80" Margin="93,174,0,0" VerticalAlignment="Top" Width="374" RenderTransformOrigin="0.5,0.5" ValueChanged="Bar1_ValueChanged" Maximum="20000" SmallChange="0.001" Minimum="-20000" LargeChange="0.01" Grid.ColumnSpan="2">
+        <ProgressBar x:Name="bar2" HorizontalAlignment="Left" Height="80" Margin="93,174,0,0" VerticalAlignment="Top" Width="374" RenderTransformOrigin="0.5,0.5"  Maximum="20000" SmallChange="0.001" Minimum="-20000" LargeChange="0.01" Grid.ColumnSpan="2">
             <ProgressBar.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="0.997" ScaleX="1.003"/>
@@ -31,7 +31,7 @@
                 </TransformGroup>
             </ProgressBar.RenderTransform>
         </ProgressBar>
-        <ProgressBar x:Name="bar3" HorizontalAlignment="Left" Height="87" Margin="117,169,0,0" VerticalAlignment="Top" Width="368" RenderTransformOrigin="0.5,0.5" ValueChanged="Bar1_ValueChanged" Maximum="20000" SmallChange="0.001" Minimum="-20000" LargeChange="0.01" Grid.Column="1">
+        <ProgressBar x:Name="bar3" HorizontalAlignment="Left" Height="87" Margin="117,169,0,0" VerticalAlignment="Top" Width="368" RenderTransformOrigin="0.5,0.5"  Maximum="20000" SmallChange="0.001" Minimum="-20000" LargeChange="0.01" Grid.Column="1">
             <ProgressBar.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="0.997" ScaleX="1.003"/>
@@ -100,10 +100,10 @@
                         </TransformGroup>
                     </Label.RenderTransform>
                 </Label>
-                <CheckBox Content="filter up&#xA;" Grid.Column="1" HorizontalAlignment="Left" Margin="0,38,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" Checked="CheckBox_Checked"/>
+                <CheckBox Content="filter up&#xA;" Grid.Column="1" HorizontalAlignment="Left" Margin="0,38,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" />
                 <CheckBox Content="filter up&#xA;" Grid.Column="1" HorizontalAlignment="Left" Margin="170,38,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6"/>
                 <CheckBox Content="filter up&#xA;" Grid.Column="1" HorizontalAlignment="Left" Margin="343,38,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6"/>
-                <CheckBox Content="filter down" Grid.Column="1" HorizontalAlignment="Left" Margin="0,361,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" Checked="CheckBox_Checked"/>
+                <CheckBox Content="filter down" Grid.Column="1" HorizontalAlignment="Left" Margin="0,361,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" />
                 <Grid RenderTransformOrigin="0.99,0.979" Grid.ColumnSpan="2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="35*"/>
@@ -125,13 +125,13 @@
                         </Label.RenderTransform>
                     </Label>
                     <Button x:Name="KeyBoardEnabe" Content="activate keboard" Grid.Column="2" HorizontalAlignment="Left" Margin="724,21,0,0" VerticalAlignment="Top" Width="117" Height="48" Click="KeyBoardEnabe_Click" RenderTransformOrigin="0.67,1.616"/>
-                    <CheckBox x:Name="filterup1" Content="filter up&#xA;" Grid.Column="2" HorizontalAlignment="Left" Margin="0,38,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" Checked="CheckBox_Checked"/>
-                    <CheckBox x:Name="filterup2" Content="filter up&#xA;" Grid.Column="2" HorizontalAlignment="Left" Margin="170,38,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" Checked="CheckBox_Checked_2"/>
-                    <CheckBox x:Name="filterup3" Content="filter up&#xA;" Grid.Column="2" HorizontalAlignment="Left" Margin="343,38,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" Checked="CheckBox_Checked_1" IsEnabled="False"/>
-                    <CheckBox Content="filter down" Grid.Column="2" HorizontalAlignment="Left" Margin="0,361,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" Checked="CheckBox_Checked"/>
-                    <CheckBox x:Name="filterDown1" Content="filter down" Grid.Column="2" HorizontalAlignment="Left" Margin="0,361,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" Checked="CheckBox_Checked" RenderTransformOrigin="2.814,0.52"/>
-                    <CheckBox x:Name="filterDown2" Content="filter down" Grid.Column="2" HorizontalAlignment="Left" Margin="170,361,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" Checked="CheckBox_Checked" RenderTransformOrigin="2.814,0.52"/>
-                    <CheckBox x:Name="filterDown3" Content="filter down" Grid.Column="2" HorizontalAlignment="Left" Margin="343,361,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" Checked="CheckBox_Checked" RenderTransformOrigin="2.814,0.52"/>
+                    <CheckBox x:Name="filterup1" Content="filter up&#xA;" Grid.Column="2" HorizontalAlignment="Left" Margin="0,38,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" />
+                    <CheckBox x:Name="filterup2" Content="filter up&#xA;" Grid.Column="2" HorizontalAlignment="Left" Margin="170,38,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" />
+                    <CheckBox x:Name="filterup3" Content="filter up&#xA;" Grid.Column="2" HorizontalAlignment="Left" Margin="343,38,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6"  IsEnabled="False"/>
+                    <CheckBox Content="filter down" Grid.Column="2" HorizontalAlignment="Left" Margin="0,361,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" />
+                    <CheckBox x:Name="filterDown1" Content="filter down" Grid.Column="2" HorizontalAlignment="Left" Margin="0,361,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6" RenderTransformOrigin="2.814,0.52"/>
+                    <CheckBox x:Name="filterDown2" Content="filter down" Grid.Column="2" HorizontalAlignment="Left" Margin="170,361,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6"  RenderTransformOrigin="2.814,0.52"/>
+                    <CheckBox x:Name="filterDown3" Content="filter down" Grid.Column="2" HorizontalAlignment="Left" Margin="343,361,0,0" VerticalAlignment="Top" Background="#FFE6E6E6" Foreground="#FFE6E6E6"  RenderTransformOrigin="2.814,0.52"/>
                     <Button x:Name="Reset_step" Content="Reset Step ALGO" Grid.Column="2" HorizontalAlignment="Left" Margin="502,38,0,0" VerticalAlignment="Top" Width="94" Height="31" Click="Reset_step_Click"/>
                     <Button x:Name="clearLog" Content="clear Log" Grid.Column="2" HorizontalAlignment="Left" Margin="777,430,0,0" VerticalAlignment="Top" Width="75" Click="ClearLog_Click"/>
                     <Button x:Name="enable_COM" Content="Start!" HorizontalAlignment="Left" Margin="226,459,0,0" VerticalAlignment="Top" Width="75" Height="26" Grid.Column="2" Click="Enable_COM_Click"/>
@@ -141,6 +141,9 @@
                     <CheckBox x:Name="AX2check" Content="axis2" Grid.Column="2" HorizontalAlignment="Left" Margin="714,469,0,0" VerticalAlignment="Top" Height="23" Width="56" IsChecked="True" Background="White"/>
                     <CheckBox x:Name="AX3check" Content="axis3" Grid.Column="2" HorizontalAlignment="Left" Margin="796,469,0,0" VerticalAlignment="Top" Height="23" Width="56" IsChecked="True" Background="White"/>
                     <Button x:Name="scanForPorts" Content="Rescan" Grid.Column="2" HorizontalAlignment="Left" Margin="55,434,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.267,0.445" Click="ScanForPorts_Click"/>
+                    <CheckBox x:Name="ReboundDetectionCheckbox" Content="rebound Detection" Grid.Column="2" HorizontalAlignment="Left" Margin="502,397,0,0" VerticalAlignment="Top" Foreground="#FFE7EAEA" IsChecked="True" Click="ReboundDetectionCheckbox_Checked"/>
+                    <TextBox x:Name="timeoutTextBox" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="466,459,0,0" TextWrapping="Wrap" TextChanged="updateTimoutValue" VerticalAlignment="Top" Width="120"/>
+                    <Label Content="Time Out:&#xD;&#xA;" Grid.Column="2" HorizontalAlignment="Left" Margin="388,459,0,0" VerticalAlignment="Top" Foreground="White"/>
 
                 </Grid>
 
